# hidden-hand

./: .gitignore  .vercelignore  README.md  package.json  tsconfig.json
anchor/: Anchor.toml
anchor/programs/hidden_hand/: Cargo.toml
anchor/programs/hidden_hand/src/: lib.rs
hidden-hand/: Anchor.toml
hidden-hand/programs/hidden-hand/: Cargo.toml
hidden-hand/programs/hidden-hand/src/: lib.rs
hidden-hand/tests/: hidden-hand.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auction/: route.ts
src/app/api/wallet-stats/: route.ts
src/lib/: agents.ts  anchor-client.ts  auction.ts  er.ts  items.ts
src/lib/idl/: hidden_hand.json  hidden_hand.ts
