[package]
name = "hidden_hand"
version = "0.1.0"
description = "Hidden Hand sealed-bid auction program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hidden_hand"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.11.1", features = ["anchor", "disable-realloc"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
